add: Summary 페이지 Form 구현

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,5 @@
 {
-  "plugins": [
-    "testing-library",
-    "jest-dom"
-  ],
+  "plugins": ["testing-library", "jest-dom"],
   "extends": [
     "react-app",
     "react-app/jest",
