--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-testing-library": "^5.9.1",
-    "eslint-plugin-jest-dom": "^4.0.3"
+    "msw": "^0.49.2"
   },
   "scripts": {
     "start": "react-scripts start",
